--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,12 +3,19 @@
     "next/core-web-vitals",
     "next/typescript",
     "airbnb",
+    "airbnb/hooks",
     "airbnb-typescript",
     "plugin:@typescript-eslint/recommended",
+    "plugin:react/recommended",
     "plugin:prettier/recommended"
   ],
-  "plugins": ["@typescript-eslint", "prettier"],
+  "plugins": ["@typescript-eslint", "prettier", "import", "react"],
   "parserOptions": {
+    "ecmaVersion": "latest",
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "jsx": true
+    },
     "project": "./tsconfig.json"
   },
   "rules": {
@@ -16,5 +23,6 @@
     "no-console": "warn",
     "react/react-in-jsx-scope": "off",
     "import/prefer-default-export": "off"
-  }
+  },
+  "ignorePatterns": ["build", "dist", "public"]
 }
