--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     ]
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18"
@@ -27,8 +29,6 @@
     "@types/react-dom": "^18",
     "@typescript-eslint/eslint-plugin": "7.0",
     "@typescript-eslint/parser": "7.0",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
     "eslint": "^8",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^18.0.0",
@@ -41,10 +41,7 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "husky": "^8.0.0",
     "lint-staged": "^15.2.10",
-    "postcss": "^8",
     "prettier": "^3.3.3",
-    "tailwind-merge": "^2.5.2",
-    "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
 }
