--- a/package.json
+++ b/package.json
@@ -17,14 +17,19 @@
     ]
   },
   "dependencies": {
+    "@dicebear/avatars": "^4.10.8",
+    "@dicebear/notionists-neutral": "^9.2.2",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@tanstack/react-query": "^5.56.2",
     "@tanstack/react-query-devtools": "^5.58.0",
     "emotion-reset": "^3.0.1",
+    "framer-motion": "^11.11.0",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
+    "return-fetch": "^0.4.6",
+    "zod": "^3.23.8",
     "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
