--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,7 +24,8 @@
     "react/react-in-jsx-scope": "off",
     "import/prefer-default-export": "off",
     "react/require-default-props": "off",
-    "react-hooks/exhaustive-deps": "off"
+    "react-hooks/exhaustive-deps": "off",
+    "react/jsx-props-no-spreading": "off"
   },
   "ignorePatterns": ["build", "dist", "public"]
 }
